# docparity

./: .gitignore  CLAUDE.md  README.md  RESUME_PROMPT.md  pyproject.toml
configs/: dataset.yaml  evaluation.yaml  models.yaml  prompts.yaml
docs/: data_strategy_3.md  evaluation_strategy_4.md  initial_exploration_1.md  missing_aspects_5.md  progress.md  step_by_step_strategy_2.md
docs/abstract/: Broad_Area_of_Work.md  Objectives.md  Plan_of_work.md  Scope_of_Work.md  background.md  references.md  remarks_supervisor.md
docs/superpowers/plans/: 2026-05-14-docparity-pipeline.md
docs/superpowers/specs/: 2026-05-14-docparity-pipeline-design.md
src/baselines/: ast_checker.py  darglint_runner.py  git_heuristic.py
src/evaluation/: metrics.py  reporter.py  significance.py
src/generation/: mutation_engine.py  semantic_mutators.py  syntactic_mutators.py
src/llm/: detector.py  factory.py  prompt_builder.py  response_parser.py
src/mining/: drift_miner.py  function_extractor.py  no_drift_sampler.py  repo_cloner.py
src/shared/: dataset_io.py  schema.py
tests/: test_ast_checker.py  test_darglint_runner.py  test_dataset_io.py  test_drift_miner.py  test_evaluation.py  test_git_heuristic.py  test_integration.py  test_llm_pipeline.py  test_mutation_engine.py  test_no_drift_sampler.py  test_repo_cloner.py  test_schema.py
