[project]
name = "docparity"
version = "0.1.0"
description = "LLM-Assisted Documentation Drift Detection - dissertation research pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "ollama>=0.4.0",
    "darglint>=1.8.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]